--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>张子枫</title>
     <link rel="stylesheet" href="css/index.css">
-</head><!DOCTYPE html>
+</head>
 <body>
     <div id="top">
         <div class="container"></div>
